--- a/lib/workpermit_web/templates/permit/index.html.eex
+++ b/lib/workpermit_web/templates/permit/index.html.eex
@@ -3,15 +3,15 @@
   <table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4 table">
     <thead>
       <tr>
-        <th>Category</th>
-        <th>Number</th>
-        <th>Issued</th>
-        <th>Start</th>
-        <th>Finish</th>
-        <th>Closed</th>
-        <th>Issuer</th>
-        <th>Performer</th>
-        <th>Controller</th>
+        <th><%= gettext("Category") %></th>
+        <th><%= gettext("Number") %></th>
+        <th><%= gettext("Issued") %></th>
+        <th><%= gettext("Start") %></th>
+        <th><%= gettext("Finish") %></th>
+        <th><%= gettext("Closed") %></th>
+        <th><%= gettext("Issuer") %></th>
+        <th><%= gettext("Performer") %></th>
+        <th><%= gettext("Controller") %></th>
         <th></th>
       </tr>
     </thead>
@@ -24,16 +24,16 @@
             <%= permit.category %>
           </td>
           <td><%= permit.number %></td>
-          <td><%= permit.issued %></td>
-          <td><%= permit.start %></td>
-          <td><%= permit.finish %></td>
-          <td><%= permit.closed %></td>
-          <td><%= permit.issuer_id %></td>
-          <td><%= permit.performer_id %></td>
-          <td><%= permit.controller_id %></td>
+          <td><%= permit.issued_time %></td>
+          <td><%= permit.start_time %></td>
+          <td><%= permit.finish_time %></td>
+          <td><%= permit.closed_time %></td>
+          <td><%= permit.issuer_name %></td>
+          <td><%= permit.performer_name %></td>
+          <td><%= permit.controller_name %></td>
           <td>
             <i class="far fa-eye"></i>
-            <span><%= link "Show", to: Routes.permit_path(@conn, :show, permit) %></span>
+            <span><%= link gettext("Show"), to: Routes.permit_path(@conn, :show, permit) %></span>
           </td>
         </tr>
       <% end %>
