--- a/assets/css/_multi_step_form.scss
+++ b/assets/css/_multi_step_form.scss
@@ -1,10 +1,10 @@
 /* Style the form */
-#regForm {
+#permitForm {
   background-color: #ffffff;
   margin: 100px auto;
   padding: 40px;
   width: 70%;
-  min-width: 300px;
+  min-width: 600px;
 }
 
 /* Style the input fields */
@@ -12,7 +12,6 @@ input {
   padding: 10px;
   width: 100%;
   font-size: 17px;
-  font-family: Raleway;
   border: 1px solid #aaaaaa;
 }
 
