--- a/lib/workpermit_web/templates/layout/components/head.html.eex
+++ b/lib/workpermit_web/templates/layout/components/head.html.eex
@@ -15,5 +15,6 @@
   <meta name="msapplication-config" content="/favicon/browserconfig.xml">
   <meta name="theme-color" content="#415bba">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="csrf" content="<%= Plug.CSRFProtection.get_csrf_token() %>">
   <title><%= gettext("Workpermit") %></title>
 </head>
