user autocomplete feature

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -97,6 +97,7 @@ body {
 }
 
 @tailwind utilities;
+@import "~awesomplete/awesomplete.base.css";
 /*@import "tailwindcss/utilities";*/
 /* Put your custom utilities here */
 
